--- a/index.html
+++ b/index.html
@@ -112,3 +112,16 @@
     </body>
 
 </html>
+
+<style>
+    {
+  margin:0;
+  padding: 0;
+  font-family: sans-serif;
+}
+.container{
+  width:100%;
+  height:100%;
+  background:#42455;
+}
+</style>
