--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
         <title>Homework 2</title>
         
-        <link rel="stylesheet" href="style.css" type="text"/>
+        <link rel="stylesheet" href="style.css">
 
         <meta charset="UTF-8">
         
