--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
         margin:0;
         padding: 0;
         font-family: sans-serif;
+
+	body {
+  	background-color: lightblue;
+	}
       
        
         </style>
