--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
         margin:0;
         padding: 0;
         font-family: sans-serif;
+		
+	<style>
+	body {
+  	background-color: lightblue;
+	}
+	</style>
 
       
        
